--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h2
       <div class="child">
       <img src="janu.jfif" alt="profil"><br>
 <h2>Jahnavi</h2>
-<a href="resume.html">view profile</a>
+<a href="Resume.html">view profile</a>
       </div>
     </div>
 </body>
